# bridgebuddybot

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
bridgebuddybot/: main.py
