[project]
name = "bridgebuddybot"
authors = [
    {name = "Sean Doyer", email = "obsidey@gmail.com"},
]
license = "MIT"
version = "0.1.0"
description = "A one-way bot bridge between Telegram and Google Sheets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.193.0",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.0",
    "requests>=2.33.0",
]
